# fastapi-xroad-soap

./: .devtools  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-publish.yaml  publish.yaml  test-coverage.yaml
fastapi_xroad_soap/: __init__.py  elements.py  faults.py  fields.py  utils.py
fastapi_xroad_soap/internal/: base.py  cid_gen.py  constants.py  errors.py  file_size.py  storage.py  uid_gen.py
fastapi_xroad_soap/internal/base/: __init__.py  base_element_spec.py  body.py  composite_meta.py  dynamic_spec.py  message_body.py  meta.py  spec.py  validators.py
fastapi_xroad_soap/internal/elements/: __init__.py  boolean.py  common.py  date.py  datetime.py  float.py  integer.py  netres.py  numeric_type_spec.py  string.py  string_type_spec.py  swaref.py  time.py  validators.py
fastapi_xroad_soap/internal/envelope/: __init__.py  base.py  factory.py  generics.py  header.py
fastapi_xroad_soap/internal/fields/: swaref.py
fastapi_xroad_soap/internal/multipart/: __all__.py  __init__.py  bodypart.py  decoder.py  encoder.py  errors.py  fields.py  helpers.py  structures.py
media/: soap.psd
src/: constants.py  service.py
src/envelope/: __init__.py  factory.py  header.py  parts.py
src/multipart/: __all__.py  decoder.py  fields.py  structures.py
src/utils/: __init__.py  file_utils.py  import_utils.py  object_utils.py
tests/: conftest.py  test_base.py  test_cid_gen.py  test_constants.py  test_exports.py  test_file_size.py  test_storage.py  test_uid_gen.py
tests/test_base/: conftest.py  test_base_element_spec.py  test_composite_meta.py  test_dynamic_spec.py  test_message_body.py  test_validators.py
tests/test_elements/: __init__.py  conftest.py  test_boolean.py  test_date.py  test_datetime.py  test_float.py  test_integer.py  test_netres.py  test_string.py  test_swaref.py  test_swaref_utils.py  test_time.py
tests/test_envelope/: conftest.py  test_factory.py  test_generics.py  test_header.py
tests/test_multipart/: test_decoder.py  test_errors.py
tests/test_soap/: conftest.py  test_action.py  test_faults.py  test_response.py  test_service.py  test_validators.py
tests/test_utils/: conftest.py  test_content_utils.py  test_path_utils.py  test_route_utils.py
tests/test_various/: test_file_size.py  test_storage.py
tests/test_wsdl/: conftest.py  test_generate.py  with_basic_elements.wsdl  with_restricted_elements.wsdl  with_swa_ref_element.wsdl  without_action_types.wsdl
tests/wsdl_files/: single_type_action_io.wsdl  with_basic_elements.wsdl  with_doc_and_ret.wsdl  with_restricted_elements.wsdl  with_swa_ref_element.wsdl  without_action_types.wsdl  without_actions.wsdl
(+64 files in other folders)
